# armada

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  setup.py
knowledge/: KNOWLEDGE.md
skills/: SKILL.md  propose.md  review.md  sync.md
src/armada/: __init__.py  convergence.py
src/armada/comparison/: __init__.py  chunked.py  prompts.py
src/armada/disposition/: __init__.py  engine.py
src/armada/errors/: __init__.py  retry.py  state.py
src/armada/git/: __init__.py  cache.py  filter.py
src/armada/hooks/: session_start.py
src/armada/models/: __init__.py  config.py  grain.py  queue.py
tests/: conftest.py  test_comparison.py  test_convergence.py  test_disposition.py  test_errors.py  test_git.py  test_models.py
