[project]
name = "armada"
version = "0.1.0"
description = "Collaborative agent knowledge network — an LLM reads two developers' agent instruction sets and proposes improvements to each via PRs"
readme = "README.md"
authors = [
    { name = "Mike Dougherty", email = "mike.dougherty@missionlane.com" },
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11",
    "pyyaml>=6.0",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
    "types-pyyaml>=6.0.12.20260518",
]
test = ["pytest", "pytest-cov", "pytest-mock"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
markers = [
    "unit: unit tests",
    "integration: integration tests (may require external services)",
]
addopts = "--strict-markers --cov=armada --cov-branch --cov-report=term-missing"
